Docs: 대칭키 & 공개키.md

--- a/Network/대칭키 & 공개키.md
+++ b/Network/대칭키 & 공개키.md
@@ -20,3 +20,14 @@
 ## 04. 세션 키
 - 대칭 키와 공개 키 암호화 방식을 함께 사용하는 경우가 많다.
 - 공개 키로 대칭 키를 암호화 하고, 개인 키로 암호화된 대칭 키를 복호화한다.
+
+## 05. 자주 나오는 질문
+1. 대칭 키 암호화와 공개 키 암호화의 차이점은?
+<img width="673" alt="image" src="https://github.com/user-attachments/assets/fcce3b12-e0ab-4202-ac71-6b7c7ada8c02">
+
+2. 대칭 키 암호화의 장단점은?
+<img width="648" alt="image" src="https://github.com/user-attachments/assets/255968d2-6938-4881-94e1-9a59575e7dd0">
+
+3. 대칭키와 공개키 알고리즘은 어떻게 함께 사용되는가?
+<img width="668" alt="image" src="https://github.com/user-attachments/assets/586ad5dd-9b76-4fbc-9744-12d5c5dc98b5">
+
