--- a/데이터베이스/정규화.md
+++ b/데이터베이스/정규화.md
@@ -1,1 +1,98 @@
-.
+## 01. 정규화
+관계형 데이터 모델에서 데이터의 중복성을 제거하여 이상 현상을 방지하고, 데이터의 일관성과 정확성을 유지하기 위해 무손실 분해하는 과정   
+=> 목표 : 중복된 데이터를 허용하지 않는 것
+
+## 02. 이상 현상
+데이터의 중복성으로 인해 릴레이션(행과 열로 구성된 테이블)을 조작할 때 발생하는 비합리적인 현상
+<img width="593" alt="image" src="https://github.com/user-attachments/assets/6ce8425e-6b97-428a-b7a2-e8654e7a234a">
+
+## 03. 정규화의 단계
+<img width="477" alt="image" src="https://github.com/user-attachments/assets/67b005cd-cebf-4e36-a8f8-c4092ef390c0">
+
+## 04. 함수 종속
+- 함수 종속 : 릴레이션에서 속성의 의미와 속성 간 상호 관계로부터 발생하는 제약조건
+- 결정자/종속자 : X -> Y 관계일 때 X는 결정자, Y는 종속자
+- 함수 종속에는 부분 함수 종속, 완전 함수 종속, 이행 함수 종속이 있다.
+</br>
+(1) 부분 함수 종속 : 릴레이션에서 기본 키가 복합 키인 경우 기본 키를 구성하는 속성 중 일부에게 종속된 경우
+</br>
+(2) 완전 함수 종속 : 릴레이션에서 X -> Y 관계가 있을 때, Y는 X의 전체 속성에 대해 종속하고, 부분 집합 속성에 종속하지 않는 경우
+</br>
+(3) 이행 함수 종속 : 릴레이션에서 X -> Y, Y -> Z 종속 관계가 있을 때, X -> Z가 성립되는 경우   
+
+## 05. 정규화 상세 단계
+### 1차 정규화(1NF)
+- 원자값으로 구성, 반복 속성/중복 제거가 필요하다.
+<img width="612" alt="image" src="https://github.com/user-attachments/assets/b6648621-12cf-4d07-8ebd-efa2567b2d83">
+<img width="600" alt="image" src="https://github.com/user-attachments/assets/175099b5-ebcc-4339-a2dc-82aaafc87906">
+
+### 2차 정규화(2NF)
+- 제 1정규형을 만족해야 한다.
+- 부분함수 종속 제거(완전 함수적 종속 제거), 주식별자 아닌 속성을 분리한다.
+- 기본 키의 부분집합 키가 결정자가 되어서는 안된다.
+<img width="621" alt="image" src="https://github.com/user-attachments/assets/b0bb9933-cac5-4c43-b4e6-697c736353e2">
+<img width="591" alt="image" src="https://github.com/user-attachments/assets/ffbfc12e-84f0-4de2-9000-a7696d96bd84">
+
+### 3차 정규화(3NF)
+- 제 1, 2정규형을 만족해야 한다.
+- 이행함수 종속 제거, 속성에 종속적인 속성을 분리한다.
+<img width="436" alt="image" src="https://github.com/user-attachments/assets/26c80c23-a9e3-47f6-936e-7ff685aa7f76">
+<img width="486" alt="image" src="https://github.com/user-attachments/assets/5460420f-6a8c-4041-9be3-21de134a00e3">
+
+### BNF (Boyce-Codd Normal Form)
+- 제 3정규형을 만족해야 한다.
+- 결정자 함수 종속, 모든 결정자가 후보키이다.
+<img width="599" alt="image" src="https://github.com/user-attachments/assets/78afc2e4-f120-431d-810b-df7edaaab583">
+- (학생번호, 과목)이 기본키로 지도교수를 알 수 있다. 하지만 같은 과목을 다른 교수가 가르칠 수 있어서 과목 -> 지도교수 종속은 성립하지 않는다. 하지만, 지도교수가 어느 과목을 가르치는 경우를 알 수 있으므로 지도교수 -> 과목 종속이 성립한다. (BCNF 만족X)
+<img width="664" alt="image" src="https://github.com/user-attachments/assets/6a7a17ca-2838-48bc-8eb8-8858ba7d4590">
+
+### 4차 정규화 (4NF)
+- BCNF를 만족해야 한다.
+- 다치 종속 Multi-valued Dependency 제거, 특정 속성값에 따라 선택적인 속성을 분리한다.
+<img width="666" alt="image" src="https://github.com/user-attachments/assets/37a4b3c3-b909-4bec-a759-8de728f2981a">
+- 과목과 취미는 독립적인 관계지만, 학생 번호라는 컬럼에 다치 종속되어 학생 번호를 토대로 조회하면 중복이 발생하게 된다.
+- <img width="627" alt="image" src="https://github.com/user-attachments/assets/a46a2e03-ccbc-444b-a977-2b011b814931">
+
+### 5차 정규화 (5NF)
+- 4NF를 만족해야 한다.
+- 조인 종속을 제거한다.
+- A 릴레이션을 B와 C로 분해했다가 다시 조인했을 때 다시 A가 된다면 조인 종속이 있다.
+<img width="645" alt="image" src="https://github.com/user-attachments/assets/348aa7fc-d2b5-46f6-a3a6-e45cfc70877c">
+- 과목과 학생번호를 속성으로 하는 테이블을 하나 더 만든다.
+
+## 06. 반정규화
+- 정규화된 엔터티, 속성, 관계에 대해 성능 향상과 개발 운영의 단순화를 위해 중복, 통합, 분리 등을 수행하는 데이터 모델링의 기법
+- 비정규화, 역정규화
+- 장점 : 성능 향상과 관리의 효율성 증가
+- 단점 : 데이터의 일관성 및 정합성 저하, 유지 비용이 별도로 발생 가능
+
+### 반정규화 기법
+- 테이블 병합 : 1:1 관계, 1:M 관계를 통합하여 조인 횟수를 줄여 성능을 향상
+- 테이블 분할(파티셔닝) : 수평 분할, 수직 분할
+- 중복 테이블 추가 : 효율적인 연산을 위해 별도의 통계 테이블(집계함수 사용)을 두거나 중복 테이블을 추가
+- 컬럼 중복화 : 조인 성능 향상을 위한 중복 허용
+- 중복 관계 추가 : 여러 경로를 거쳐 조인하는 대신 성능 저하 예방하기 위해 추가적 관계 맺는 기법
+
+## 07. 문제 풀이
+
+필요한 정규화 단계 및 과정은 ?
+<img width="648" alt="image" src="https://github.com/user-attachments/assets/a7512071-8830-4b62-be9d-3f68d23fc0f8">
+
+
+## 08. 자주 나오는 질문
+1. 정규화란 무엇이며, 왜 필요한가 ?
+<img width="721" alt="image" src="https://github.com/user-attachments/assets/9de6d126-df40-48cd-895d-f7db6e2efdb6">
+
+2. 제1정규형(1NF), 제2정규형(2NF), 제3정규형(3NF)의 차이점 ?
+<img width="731" alt="image" src="https://github.com/user-attachments/assets/837b44ae-c616-4b8e-b0e4-cb9bea1df8cf">
+
+3. 정규화를 진행할 때 발생할 수 있는 문제점은 ?
+<img width="728" alt="image" src="https://github.com/user-attachments/assets/3f38ef69-2f54-4b63-9832-459bbc767cc4">
+
+
+
+
+### 참고
+   - https://code-lab1.tistory.com/48
+   - https://cruella-de-vil.tistory.com/17
+   - 정보처리기사 수제비 실기 1권
