--- a/데이터베이스/정규화.md
+++ b/데이터베이스/정규화.md
@@ -28,7 +28,7 @@
 
 ### 2차 정규화(2NF)
 - 제 1정규형을 만족해야 한다.
-- 부분함수 종속 제거(완전 함수적 종속 제거), 주식별자 아닌 속성을 분리한다.
+- 부분함수 종속 제거(완전 함수적 종속), 주식별자 아닌 속성을 분리한다.
 - 기본 키의 부분집합 키가 결정자가 되어서는 안된다.
 <img width="621" alt="image" src="https://github.com/user-attachments/assets/b0bb9933-cac5-4c43-b4e6-697c736353e2">
 <img width="591" alt="image" src="https://github.com/user-attachments/assets/ffbfc12e-84f0-4de2-9000-a7696d96bd84">
