--- a/데이터베이스/정규화.md
+++ b/데이터베이스/정규화.md
@@ -39,17 +39,19 @@
 <img width="436" alt="image" src="https://github.com/user-attachments/assets/26c80c23-a9e3-47f6-936e-7ff685aa7f76">
 <img width="486" alt="image" src="https://github.com/user-attachments/assets/5460420f-6a8c-4041-9be3-21de134a00e3">
 
-### BNF (Boyce-Codd Normal Form)
+### BCNF (Boyce-Codd Normal Form)
 - 제 3정규형을 만족해야 한다.
 - 결정자 함수 종속, 모든 결정자가 후보키이다.
+</br>
 <img width="599" alt="image" src="https://github.com/user-attachments/assets/78afc2e4-f120-431d-810b-df7edaaab583">
+</br>
 - (학생번호, 과목)이 기본키로 지도교수를 알 수 있다. 하지만 같은 과목을 다른 교수가 가르칠 수 있어서 과목 -> 지도교수 종속은 성립하지 않는다. 하지만, 지도교수가 어느 과목을 가르치는 경우를 알 수 있으므로 지도교수 -> 과목 종속이 성립한다. (BCNF 만족X)
 <img width="664" alt="image" src="https://github.com/user-attachments/assets/6a7a17ca-2838-48bc-8eb8-8858ba7d4590">
 
 ### 4차 정규화 (4NF)
 - BCNF를 만족해야 한다.
 - 다치 종속 Multi-valued Dependency 제거, 특정 속성값에 따라 선택적인 속성을 분리한다.
-<img width="666" alt="image" src="https://github.com/user-attachments/assets/37a4b3c3-b909-4bec-a759-8de728f2981a">
+<img width="666" alt="image" src="https://github.com/user-attachments/assets/37a4b3c3-b909-4bec-a759-8de728f2981a"> </br>
 - 과목과 취미는 독립적인 관계지만, 학생 번호라는 컬럼에 다치 종속되어 학생 번호를 토대로 조회하면 중복이 발생하게 된다.
 - <img width="627" alt="image" src="https://github.com/user-attachments/assets/a46a2e03-ccbc-444b-a977-2b011b814931">
 
@@ -57,7 +59,7 @@
 - 4NF를 만족해야 한다.
 - 조인 종속을 제거한다.
 - A 릴레이션을 B와 C로 분해했다가 다시 조인했을 때 다시 A가 된다면 조인 종속이 있다.
-<img width="645" alt="image" src="https://github.com/user-attachments/assets/348aa7fc-d2b5-46f6-a3a6-e45cfc70877c">
+<img width="645" alt="image" src="https://github.com/user-attachments/assets/348aa7fc-d2b5-46f6-a3a6-e45cfc70877c"> </br>
 - 과목과 학생번호를 속성으로 하는 테이블을 하나 더 만든다.
 
 ## 06. 반정규화
