--- a/데이터베이스/정규화.md
+++ b/데이터베이스/정규화.md
@@ -57,8 +57,8 @@
 
 ### 5차 정규화 (5NF)
 - 4NF를 만족해야 한다.
-- 조인 종속을 제거한다.
-- A 릴레이션을 B와 C로 분해했다가 다시 조인했을 때 다시 A가 된다면 조인 종속이 있다.
+- 조인 종속(조인 수행 전 데이터와 다르게 되는 문제)을 제거한다.
+- A 릴레이션을 B와 C로 분해했다가 다시 조인했을 때 다시 A가 된다면 조인 종속이 없다.
 <img width="645" alt="image" src="https://github.com/user-attachments/assets/348aa7fc-d2b5-46f6-a3a6-e45cfc70877c"> </br>
 - 과목과 학생번호를 속성으로 하는 테이블을 하나 더 만든다.
 
