--- a/데이터베이스/정규화.md
+++ b/데이터베이스/정규화.md
@@ -60,7 +60,7 @@
 - 조인 종속(조인 수행 전 데이터와 다르게 되는 문제)을 제거한다.
 - A 릴레이션을 B와 C로 분해했다가 다시 조인했을 때 다시 A가 된다면 조인 종속이 없다.
 <img width="645" alt="image" src="https://github.com/user-attachments/assets/348aa7fc-d2b5-46f6-a3a6-e45cfc70877c"> </br>
-- 과목과 학생번호를 속성으로 하는 테이블을 하나 더 만든다.
+- 과목과 취미를 속성으로 하는 테이블을 하나 더 만든다.
 
 ## 06. 반정규화
 - 정규화된 엔터티, 속성, 관계에 대해 성능 향상과 개발 운영의 단순화를 위해 중복, 통합, 분리 등을 수행하는 데이터 모델링의 기법
