Docs: 저장 프로시저.md

--- a/데이터베이스/저장 프로시저.md
+++ b/데이터베이스/저장 프로시저.md
@@ -1,4 +1,4 @@
-# 저장 프로시저란?
+# 01. 저장 프로시저란?
 
 > 일련의 쿼리를 마치 **하나의 함수**처럼 실행하기 위한 쿼리의 집합
 
@@ -11,7 +11,7 @@
 
 ![image7](https://github.com/user-attachments/assets/6354f168-cdb1-454d-bd05-09e9fd08e63a)
 
-# 문법 및 사용 예시
+# 02. 문법 및 사용 예시
 
 ### 프로시저 선언
 
@@ -56,7 +56,7 @@ CALL TEST_PROC('테스트이름', 21);
 3. 메모리 공간(캐시)에 저장
 4. 프로시저 실행
 
-# 장단점
+# 03. 장단점
 
 ## 장점
 
@@ -90,7 +90,7 @@ CALL TEST_PROC('테스트이름', 21);
 
 - 저장 프로시저 내 발생하는 오류를 디버깅하는 것이 애플리케이션 코드에 비해 어려울 수 있다.
 
-# 자주 나오는 질문 정리
+# 04. 자주 나오는 질문 정리
 
 ### 저장 프로시저가 무엇인지 설명해주세요. 그리고 저장 프로시저와 일반 SQL 쿼리의 차이점은 무엇인가요?
 
