--- a/자료구조/해시.md
+++ b/자료구조/해시.md
@@ -1,1 +1,126 @@
+# 00. 해시 자료구조
+- 저장 또는 검색 등에서 자주 활용되는 자료구조
+- 특정한 함수(알고리즘)을 통해서 값을 추출하고 활용
+- 더 나아가 암호, 블록체인, 메시지 인증 코드 등에서도 활용
 
+# 01. 해시
+- 해시(Hash)는 입력 데이터를 고정된 길이의 데이터로 변환한 값
+- 해시함수에 의해 얻게 된다.
+- 데이터의 KEY 값이 해시 함수를 통해서 변환된 정수
+- 정수로 변환된 해시는 배열의 인덱스, 위치, 데이터 값을 저장하거나 검색할 때 활용
+<img width="648" alt="image" src="https://github.com/user-attachments/assets/49c91581-d78d-469f-84f5-1e561653f43c">
+
+# 02. 해시의 특징
+- 키(KEY)에 데이터(Value)을 매핑할 수 있는 데이터 구조
+- 해시 함수를 통해 키의 데이터를 배열에 저장할 수 있는 주소(인덱스 번호)를 계산
+- 키를 통해서 저장된 데이터를 빠르게 찾고, 저장 및 탐색 속도가 획기적으로 빨라짐
+
+# 03. 주요 용어
+
+## 해시 함수(Hash Function)
+- 임의의 데이터를 고정된 길이의 값으로 리턴해주는 함수
+- 입력받은 데이터를 해시 값으로 출력시키는 알고리즘
+- 알고리즘에 따라 다양한 결과를 보이기에 목적에 맞게 설계되고 자료구조, 캐시, 검색, 에러 검출, 암호 등으로 사용됨
+- 중간 제곱법, 제산법, 숫자 분석법, 접지법등
+
+### 중간 제곱법(mid-square)
+키 값을 제곱한 결과의 중간 부분 및 몇 비트를 인덱스로 활용
+
+### 제산법
+- 나머지 연산을 통해 해시값을 계산하는 방법
+- 키 값 % 전체 버킷의 크기 = 인덱스
+- 보통 키 값을 나누는 정수는 소수
+- 일반적으로 해시 테이블의 크기보다 큰 정수 중 가장 작은 소수로 나머지 연산
+
+<br />
+<img width="349" alt="image" src="https://github.com/user-attachments/assets/351121d8-0ac2-4cb8-89f4-3b40972055f7">
+
+- 문자의 0번에 해당되는 부분을 정수화하여 100으로 나눈 뒤, 나오는 나머지를 반환하는 함수
+- 반환된 값은 배열의 인덱스가 되고, 해당 인덱스에 맞게 저장할 수 있게 됨
+
+## 해시 테이블(Hash Table)
+- 키 값의 연산에 의해 직접 접근이 가능한 데이터 구조
+- 키와 값을 함께 저장해둔 데이터 구조
+- 데이터가 행과 열로 구성된 표에 저장되는 것과 유사
+- 데이터 저장시 위치는 무작위이기 때문에 중간에 여유 공간이 발생할 수 있다.
+<img width="687" alt="image" src="https://github.com/user-attachments/assets/541bc7f4-e2c8-4221-a23b-9706a59b21a8">
+
+### 버킷(Bucket), 슬롯(Slot)
+- 해시 함수가 %2라고 정의
+- 이때 Key가 홀수라면 1번 칸에, 짝수라면 0번 칸에 저장할 것
+<img width="297" alt="image" src="https://github.com/user-attachments/assets/af8cd426-792f-4765-8443-596d88eeabb4">
+
+- 버킷 : 하나의 주소를 갖는 파일의 한 구역, 버킷의 크기는 같은 주소에 포함될 수 있는 레코드 수
+- 슬록 : 한 개의 레코드를 저장할 수 있는 공간, 한 버킷 안에 여러 개의 슬롯이 있음
+- 그림의 버킷의 크기는 4이고, 범위는 0~3이다.
+- 그림의 슬롯의 크기는 3
+- 해시 테이블의 전체 저장 공간은 버킷의 수 * 슬롯의 수 = 12
+
+### 기억장소 활용률
+- 해시 테이블 전체 기억장소에 데이터가 담겨있는 비율
+- 저장된 데이터 수 / (슬롯의 수 * 버킷의 수)
+- 동적할당의 경우 저장된 데이터 수 / 버킷의 수로 계산
+- 일반적으로 기억장소 활용률이 25 ~ 75%일때 가장 성능이 좋다
+
+## 해싱
+- 해시 함수에서 해시를 출력하고, 해시 테이블에 저장하는 과정까지의 행위
+<img width="686" alt="image" src="https://github.com/user-attachments/assets/b2d4aac6-928a-4805-ba72-a4e24f01104b">
+
+# 04. 해시의 장단점과 용도
+## 장점
+- 데이터 저장, 읽기 속도가 빠름
+- 키에 대한 데이터가 있는지 확인이 쉬움
+
+## 단점
+- 일반적으로 저장공간이 많이 필요
+- 여러 키에 해당하는 주소(인덱스)가 동일한 경우 충돌을 해결하기 위한 별도 자료구조 필요
+
+## 용도
+- 검색이 많이 필요한 경우
+- 저장, 삭제, 읽기가 빈번한 경우
+- 캐쉬 구현
+- 자바에서는 주로 HashMap 클래스 사용
+
+# 05. 충돌
+- 위의 예시에서 해시 함수는 입력받은 키의 첫번째 문자를 배열의 크기로 나눈 나머지를 인덱스로 사용
+- 만약 다른 키가 존재하는데 첫번째 문자가 동일하면, 인덱스는 동일하게 반환될 것
+- 그렇다면 배열에서 같은 장소에 저장되고, 이전에 저장된 정보는 사라진다
+- 이를 충돌, Collision
+- 서로 다른 키가 같은 버킷에 해시되는 경우
+- 해당 버킷의 슬롯이 충분하다면 저장이 가능하고, 충분하지 않으면 오버플로우 발생
+
+## 충돌 발생 이유
+- 함수 알고리즘의 성능이 좋지 못해서
+- 저장되는 데이터 양이 해시 테이블의 크기보다 클 때
+- 비둘기 집 원리 (비둘기가 100마리, 비둘기집이 101개가 있으면, 적어도 하나의 집에는 비둘기가 2마리 이상 들어감)
+
+## 충돌 해결하기
+### Chaining
+- 해시 테이블 저장공간 외의 공간을 활용하는 기법
+- 충돌이 발생했을 때, 연결 리스트 자료구조나 트리(Red-Black Tree)를 사용
+- jdk7까지는 linked list를 사용했으나, jdk8부터는 linked list와 red black tree 혼용
+- 연결 리스트 자료구조는 O(N)이지만 RB 트리는 O(log N)
+<img width="376" alt="image" src="https://github.com/user-attachments/assets/9550ee68-c09e-48c6-8e30-7a43e7c67712">
+
+### Open Addressing
+- 개방 주소법 : 충돌 발생시 해시 테이블 영역 내의 다른 빈 공간을 찾아 저장하는 방식
+
+1. Linear Probing(선형 탐사)
+<img width="668" alt="image" src="https://github.com/user-attachments/assets/a65354ec-31f6-40b5-a138-0eae21870235">
+
+- 해시 테이블 저장공간 안에서 충돌 문제를 해결하는 기법
+- 충돌이 발생했을 때, 해당 해시 주소(index)의 다음 주소(index)부터 맨 처음까지 순회하며 빈 공간을 찾는 방식
+- 저장 공간 활용도를 높임
+- 지정한 메모리 외 추가적인 공간이 필요 없고, 삽입, 삭제시 오버헤드가 적다.
+- 단, 최악의 경우 비어있는 버킷을 찾기 위해 탐색을 시작한 위치까지 되돌아 올 수 있다
+<br>
+
+2. 제곱 탐색 : 해시 충돌시 제곱만큼 건너뛴 버킷에 데이터를 저장하는 방법
+<img width="335" alt="image" src="https://github.com/user-attachments/assets/46158db8-9a74-4e1c-943f-ee3c1d988692">
+<br>
+
+3. 이중 해시 : 해시 충돌시 해시 함수를 한 번 더 적용한 결과를 저장
+
+# 06. 시간복잡도
+- 해시 자료구조는 충돌이 없는 일반적인 경우 O(1), 키를 통해 저장과 검색하기 때문
+- 최악의 경우, (모든 인덱스에서 충돌이 발생할 경우) O(n)
