--- a/자료구조/해시.md
+++ b/자료구조/해시.md
@@ -124,3 +124,22 @@
 # 06. 시간복잡도
 - 해시 자료구조는 충돌이 없는 일반적인 경우 O(1), 키를 통해 저장과 검색하기 때문
 - 최악의 경우, (모든 인덱스에서 충돌이 발생할 경우) O(n)
+
+# 07. 자주 나오는 질문
+1. 해시 함수의 역할과 좋은 해시 함수의 조건은?
+<img width="527" alt="image" src="https://github.com/user-attachments/assets/e1eecf2a-71bc-43b1-b453-2b96dcbb0ef3">
+
+2. 해시 충돌이 발생했을 때 이를 해결하는 방식은?
+<img width="607" alt="image" src="https://github.com/user-attachments/assets/71beb13a-59e7-4a5f-9dc7-9c8a907f66fc">
+
+3. 해시 테이블을 배열이나 이진 탐색 트리와 비교했을 때의 장단점은 ?
+<img width="569" alt="image" src="https://github.com/user-attachments/assets/acdc0e97-d540-49a0-a709-b6d10687e9c6">
+
+4. 특정 상황에서 해시 테이블을 사용하는 이유는 ? 예시를 들어라
+<img width="589" alt="image" src="https://github.com/user-attachments/assets/75edc2cd-28fd-40fa-a526-b839b5d4b749">
+
+
+### 참고
+- https://kang-james.tistory.com/entry/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0-%ED%95%B4%EC%8B%9CHASH-%EC%95%8C%EC%95%84%EB%B3%B4%EA%B8%B0
+- https://study-ihl.tistory.com/71
+- https://velog.io/@dlgosla/CS-%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0-%ED%95%B4%EC%8B%9C-%ED%85%8C%EC%9D%B4%EB%B8%94-Hash-Table-%EA%B0%9C%EB%85%90-%EC%A0%95%EB%A6%AC-wb6g3iw0
