--- a/자료구조/트라이.md
+++ b/자료구조/트라이.md
@@ -11,7 +11,7 @@
 - 각 노드에 문자를 저장하고, 자식 노드를 통해 다음 문자로 연결되면서 문자열을 구성하는 방식
 - 문자열의 각 문자는 트리의 레벨을 통해 표현되며, 루트에서부터 하위 노드로 내려가며 문자열을 확인할 수 있다
 
-# 03. 장단점
+# 03. 장점과 단점
 - 특정 문자열의 유무를 빠르게 확인할 수 있으며, 문자열의 접두사를 탐색하는 데 매우 유리하다.
 - 이를 통해 자동완성이나 사전 구현에 효율적으로 활용할 수 있다.
 - 동일한 접두사를 공유하는 문자열들이 트리의 경로를 공유하기 때문에 메모리 사용을 절감한다.
