--- a/자료구조/스택 & 큐.md
+++ b/자료구조/스택 & 큐.md
@@ -347,3 +347,4 @@ public class Stack {
 - [https://bangu4.tistory.com/194](https://bangu4.tistory.com/194)
 - [https://velog.io/@kangdev/기술면접자료구조-Stack-Queue](https://velog.io/@kangdev/%EA%B8%B0%EC%88%A0%EB%A9%B4%EC%A0%91%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0-Stack-Queue)
 - [https://dev-coco.tistory.com/159#head5](https://dev-coco.tistory.com/159#head5)
+- [http://velog.io/@jhl221123/자바의 Stack 클래스는 왜 사용하지 않을까](https://velog.io/@jhl221123/%EC%9E%90%EB%B0%94%EC%9D%98-Stack%EC%9D%80-%EC%99%9C-%EC%82%AC%EC%9A%A9%ED%95%98%EC%A7%80-%EC%95%8A%EB%8A%94-%EA%B1%B8%EA%B9%8C#%EA%B7%B8%EB%9F%BC-%EC%99%9C-vector%EB%A5%BC-%EC%83%81%EC%86%8D%EB%B0%9B%EC%95%98%EC%9D%84%EA%B9%8C)
