--- a/자료구조/해시.md
+++ b/자료구조/해시.md
@@ -24,6 +24,8 @@
 - 중간 제곱법, 제산법, 숫자 분석법, 접지법등
 
 ### 중간 제곱법(mid-square)
+![Uploading image.png…]()
+
 키 값을 제곱한 결과의 중간 부분 및 몇 비트를 인덱스로 활용
 
 ### 제산법
@@ -92,7 +94,7 @@
 ## 충돌 발생 이유
 - 함수 알고리즘의 성능이 좋지 못해서
 - 저장되는 데이터 양이 해시 테이블의 크기보다 클 때
-- 비둘기 집 원리 (비둘기가 100마리, 비둘기집이 101개가 있으면, 적어도 하나의 집에는 비둘기가 2마리 이상 들어감)
+- 비둘기 집 원리 (비둘기가 101마리, 비둘기집이 100개가 있으면, 적어도 하나의 집에는 비둘기가 2마리 이상 들어감)
 
 ## 충돌 해결하기
 ### Chaining
