--- a/자료구조/해시.md
+++ b/자료구조/해시.md
@@ -24,8 +24,7 @@
 - 중간 제곱법, 제산법, 숫자 분석법, 접지법등
 
 ### 중간 제곱법(mid-square)
-![Uploading image.png…]()
-
+<img width="762" alt="image" src="https://github.com/user-attachments/assets/99b8490d-1d6b-408f-8f77-761913f361a9">
 키 값을 제곱한 결과의 중간 부분 및 몇 비트를 인덱스로 활용
 
 ### 제산법
