--- a/알고리즘/선택 정렬.md
+++ b/알고리즘/선택 정렬.md
@@ -61,20 +61,14 @@ void selectionSort(int[] arr) {
 ## 장점
 
 - **구현이 단순함**: 알고리즘이 직관적이고 구현이 쉽다.
-- **추가 메모리가 거의 필요 없음**: 리스트 내에서 요소를 교환하는 방식으로 진행되므로, 추가적인 메모리 공간을 필요로 하지 않는다 (O(1) 공간 복잡도).
+- **추가 메모리가 거의 필요 없음**: 리스트 내에서 요소를 교환하는 방식으로 진행되므로, 추가적인 메모리 공간을 필요로 하지 않는다. (O(1) 공간 복잡도)
 - **데이터 이동이 적음**: 데이터의 교환 횟수가 적고, 비교 연산을 통한 탐색이 주가 되므로 특정 상황에서는 효율적이다. (예: 교환이 비용이 많이 드는 경우)
 
 ## 단점
 
-- **느린 시간 복잡도**: 시간 복잡도가 O(n2)로, 데이터가 많아질수록 속도가 급격히 느려지며, 특히 대규모 데이터에 비효율적입니다.
-    
-    O(n2)O(n^2)
-    
-- **정렬된 데이터에도 동일한 시간 소요**: 데이터가 이미 정렬되어 있거나 부분적으로 정렬된 경우에도 최선의 시간 복잡도가 O(n2)로 고정되기 때문에, 정렬 상태를 전혀 활용하지 못합니다.
-    
-    O(n2)O(n^2)
-    
-- **비교 횟수 많음**: 모든 요소를 비교해 최솟값을 찾기 때문에, 비교 횟수가 많아 속도가 더딜 수 있습니다.
+- **느린 시간 복잡도**: 시간 복잡도가 O(n2)로, 데이터가 많아질수록 속도가 급격히 느려지며, 특히 대규모 데이터에 비효율적이다.
+- **정렬된 데이터에도 동일한 시간 소요**: 데이터가 이미 정렬되어 있거나 부분적으로 정렬된 경우에도 최선의 시간 복잡도가 O(n2)로 고정되기 때문에, 정렬 상태를 전혀 활용하지 못한다.
+- **비교 횟수 많음**: 모든 요소를 비교해 최솟값을 찾기 때문에, 비교 횟수가 많아 속도가 느리다.
 
 # 04. 부록 - 제자리성, 안정성
 
