--- a/알고리즘/삽입 정렬.md
+++ b/알고리즘/삽입 정렬.md
@@ -4,7 +4,7 @@
 - 선택 정렬은 정해진 위치에 어떤 원소를 삽입할지 선택하는 것이었다면,
 - 삽입 정렬은 정해진 원소를 어떤 위치에 삽입할지 선택하는 것
 - 손 안의 카드를 정렬하는 것을 생각하면 쉽다(새로운 카드를 기존에 정렬된 카드 사이 올바른 위치에 삽입)
-- 두 번째 원소(index=2)부터 시작하며, 자료의 길이만큼 이동했을 때 정렬이 완성됨
+- 두 번째 원소부터 시작하며, 자료의 길이만큼 이동했을 때 정렬이 완성됨
 
 ## 동작과정
 
@@ -14,7 +14,7 @@
 
 - 타겟 원소의 이전 원소와 비교하므로 첫 번째 원소는 비교할 대상이 없음
     
-    → 두 번째 원소부터 비교하는 이유
+    → 두 번째 원소부터 비교하는 이유<br/>
 ![img](https://github.com/user-attachments/assets/a379707f-2c96-471d-a5af-42f876a8f51a)
 
 
