--- a/알고리즘/기수 정렬.md
+++ b/알고리즘/기수 정렬.md
@@ -32,6 +32,58 @@
 ![image (2)](https://github.com/user-attachments/assets/3b45b1b6-c3db-49af-b55e-5e1c9b97b912)
 ![image (3)](https://github.com/user-attachments/assets/55f76fae-e433-48b0-aa91-bcaced2a2154)
 
+```java
+static int BUCKET_SIZE = 10; // 10진수 정렬
+
+// 최대 자리수 구하기
+public static int getMaxRadix(int[] arr) {
+    int maxNum = arr[0];
+    for(int num : arr) {
+        maxNum = Math.max(maxNum, countDigit(num));
+    }
+
+    return maxNum;
+}
+
+// 몇자리수인지 구하기
+public static int countDigit(int num) {
+    if(num == 0) return 1;
+
+    return (int) Math.floor(Math.log10(Math.abs(num))) + 1;
+}
+
+// idx번째 자릿수 숫자 구하기
+public static int getDigit(int num, int idx)
+{
+    return (int) Math.floor(Math.abs(num) / Math.pow(10, idx)) % 10;
+}
+public static void radixSort(int[] arr) {
+    Queue<Integer>[] bucket = new LinkedList[BUCKET_SIZE];
+    for(int i=0;i<BUCKET_SIZE;i++) {
+        bucket[i] = new LinkedList<>();
+    }
+
+    int maxRadix = getMaxRadix(arr);
+    int digit = 0; // 각 자리수의 숫자
+
+    for(int i=0;i<maxRadix;i++) { // 자릿수만큼 반복
+        for(int j=0;j<arr.length;j++) { // 요소의 개수만큼 반복
+            digit = getDigit(arr[j], i);
+
+            bucket[digit].add(arr[j]);
+        }
+
+        int idx = 0;
+        // 버킷 안의 요소를 순서대로 꺼내서 배열에 저장
+        for(int j=0;j<BUCKET_SIZE;j++) {
+            while (!bucket[j].isEmpty()) {
+                arr[idx++] = bucket[j].remove(); // 배열에 저장하면서 삭제
+            }
+        }
+    }
+}
+```
+
 
 # 02. 종류
 
