--- a/알고리즘/병합 정렬.md
+++ b/알고리즘/병합 정렬.md
@@ -24,47 +24,51 @@
   - 새로운 리스트를 원래의 리스트로 옮긴다 <br>
 <img width="733" alt="image" src="https://github.com/user-attachments/assets/f8ee217c-8411-4b3c-b920-b91b0939e39c">
 
-## 04. 병합 정렬의 특징
-### 단점
+# 04. 병합 정렬의 특징
+## 단점
 - 레코드를 배열로 구성하면, 임시 배열이 필요하다 (제자리 정렬 X)
 - 레코드들의 크기가 큰 경우에는, 이동 횟수가 많으므로 매우 큰 시간적 낭비를 초래한다
 
-### 장점
+## 장점
 - 안정적인 정렬이라 데이터의 분포에 영향을 덜 받는다. 즉, 입력 데이터가 무엇이든 간에 정렬 시간은 동일하다(O(nlogn) - Best, Avg, Worst 모두
 - 레코드를 연결 리스트로 구현하면, 링크 인덱스만 변경되므로 데이터의 이동은 무시할 수 있을 정도로 작아진다. (제자리 정렬 O)
 - 따라서 크기가 큰 레코드를 정렬할 경우 연결 리스트를 사용한다면, 병합 정렬은 퀵 정렬을 포함한 다른 어떤 정렬 방법보다 효율적이다
 
-### 시간복잡도
-- 분할 단계 : 비교 연산과 이동 연산 수행 X
-- 병합 단계
-  (1) 레코드의 개수 n이라면, "순환 호출의 깊이는 log2n"이다
-    - <img width="382" alt="image" src="https://github.com/user-attachments/assets/85a151d4-2ff1-4bb3-be11-02389bbb2b66">
-    - <img width="480" alt="image" src="https://github.com/user-attachments/assets/463c555b-05e6-478e-a3fa-f650629050ac">
-    - <img width="812" alt="image" src="https://github.com/user-attachments/assets/c30f14ac-bc6b-4d3b-abbb-85bef4037b51">
+## 시간복잡도
+### 분할 단계
+- 비교 연산과 이동 연산 수행 X
+
+### 병합 단계
+(1) 레코드의 개수 n이라면, "순환 호출의 깊이는 log2n"이다
+- <img width="382" alt="image" src="https://github.com/user-attachments/assets/85a151d4-2ff1-4bb3-be11-02389bbb2b66">
+- <img width="480" alt="image" src="https://github.com/user-attachments/assets/463c555b-05e6-478e-a3fa-f650629050ac">
+- <img width="812" alt="image" src="https://github.com/user-attachments/assets/c30f14ac-bc6b-4d3b-abbb-85bef4037b51">
   <br>
   
-  (2) 각 병합 단계의 비교 연산
-  - 최대 n번의 비교
-  - 순환 호출의 깊이 만큼의 병합 단계 * 각 병합 단계의 비교 연산 = nlogn
+(2) 각 병합 단계의 비교 연산
+- 최대 n번의 비교
+- 순환 호출의 깊이 만큼의 병합 단계 * 각 병합 단계의 비교 연산 = nlogn
   <br>
   
-  (3) 이동 횟수
-  - 각 병합 단계의 이동 연산 : 임시 배열에 복사했다가, 다시 가져와야 하므로 이동 연산은 총 부분 배열에 들어있는 요소가 n인 경우, 레코드의 이동이 2n번 발생한다
-  - 순환 호출의 깊이 만큼의 병합 단계 * 각 병합 단계의 이동 연산 = 2nlogn
+(3) 이동 횟수
+- 각 병합 단계의 이동 연산 : 임시 배열에 복사했다가, 다시 가져와야 하므로 이동 연산은 총 부분 배열에 들어있는 요소가 n인 경우, 레코드의 이동이 2n번 발생한다
+- 순환 호출의 깊이 만큼의 병합 단계 * 각 병합 단계의 이동 연산 = 2nlogn
+  <br>
  
-  - T(n) = nlogn(비교) + 2nlogn(이동) = 3nlogn = O(nlogn)
+(4) T(n) = nlogn(비교) + 2nlogn(이동) = 3nlogn = O(nlogn)
  
-## 05. 퀵 정렬과 차이점
+# 05. 퀵 정렬과 차이점
 - 퀵 정렬 : 우선 피벗을 통해 정렬 후 영역을 쪼갠다
 - 병합 정렬 : 영역을 쪼갤 수 있을 만큼 쪼갠 후 정렬한다
 
+### LinkedList
 - 병합 정렬은 순차적ㅇ니 비교로 정렬을 진행하므로, LinkedList의 정렬이 필요할 때 사용하면 효율적이다.
 - 단, 퀵 정렬을 LinkedList를 사용해서 구현한다면, 성능이 좋지 않다.
 - 퀵 정렬은 순차 접근이 아닌 임의 접근이기 때문이다
 - LinkedList는 삽입, 삭제 연산에서는 유용하지만 접근 연산에서는 비효율적이다
 - 따라서 임의로 접근하는 퀵 정렬에 LinkedList를 사용하면 오버헤드가 발생할 수 있다.
 
-## 06. 자바 코드
+# 06. 자바 코드
     // 병합 정렬을 테스트하기 위한 메인 함수
     public static void main(String[] args) {
         int[] array = {38, 27, 43, 3, 9, 82, 10};
@@ -141,9 +145,9 @@
         }
     }
 }
-`
 
-## 07. 자주 나오는 질문
+
+# 07. 자주 나오는 질문
 ### 1. 병합 정렬의 시간 복잡도와 공간 복잡도는 ?
 <img width="681" alt="image" src="https://github.com/user-attachments/assets/61676a36-2fab-42fd-a402-a0430b5a77f3">
 
@@ -153,6 +157,6 @@
 ### 3. 병합 정렬이 퀵 정렬보다 느릴 수 있는 이유는 ?
 <img width="732" alt="image" src="https://github.com/user-attachments/assets/e53e2317-7390-42f2-be16-675ad5087c7f">
 
-## 08. 참고
+# 08. 참고
 - https://gyoogle.dev/blog/algorithm/Merge%20Sort.html
 - https://gmlwjd9405.github.io/2018/05/08/algorithm-merge-sort.html
