--- a/알고리즘/기수 정렬.md
+++ b/알고리즘/기수 정렬.md
@@ -83,7 +83,15 @@ public static void radixSort(int[] arr) {
     }
 }
 ```
+### 참고
 
+기수 정렬은 기본적으로 음수를 지원하지 않는다.
+
+기수 정렬은 절대값 기반으로 작동하며, 버킷에는 부호의 개념이 없기 때문.
+
+음수만 포함된 배열을 정렬하려면 절대값으로 정렬한 후 결과를 반전하여 정렬할 수 있고,
+
+음수와 양수가 섞인 배열이라면 음수 배열과 양수 배열로 나누어 따로 정렬한 뒤 음수 배열의 역순과 양수 배열을 합치는 과정이 필요하다.
 
 # 02. 종류
 
