--- a/알고리즘/힙 정렬.md
+++ b/알고리즘/힙 정렬.md
@@ -13,6 +13,16 @@
     2. 루트에 있던 값(가장 큰 값)을 힙에서 제외시킴
 3. 힙의 사이즈가 0이 될 때까지 반복
 
+![Heapsort-example](https://github.com/user-attachments/assets/2324c4f7-4538-4fc7-89e9-3ef4236ad8d4)
+
+### 힙 삽입
+
+![maxheap-insertion](https://github.com/user-attachments/assets/865b99c2-ab36-4d66-b287-bbe6d4f7fea2)
+
+### 힙 삭제
+
+![maxheap-delete](https://github.com/user-attachments/assets/4c391d72-3867-4079-b72c-5130cdbf1c44)
+
 # 03. 코드
 
 ```java
@@ -40,36 +50,36 @@
 ```
 
 ```java
-    // To heapify a subtree rooted with node i
-    // which is an index in arr[].
+    // 노드 i가 루트인 서브트리를 힙 구조로 변환하기 위한 함수
+    // i는 arr[]에서의 인덱스를 나타냅니다.
     static void heapify(int arr[], int n, int i) {
 
-        // Initialize largest as root
+        // 현재 루트를 가장 큰 값으로 초기화
         int largest = i; 
 
-        // left index = 2*i + 1
+        // 왼쪽 자식의 인덱스 = 2*i + 1
         int l = 2 * i + 1; 
 
-        // right index = 2*i + 2
+        // 오른쪽 자식의 인덱스 = 2*i + 2
         int r = 2 * i + 2;
 
-        // If left child is larger than root
+        // 왼쪽 자식이 루트보다 크면
         if (l < n && arr[l] > arr[largest]) {
             largest = l;
         }
 
-        // If right child is larger than largest so far
+        // 오른쪽 자식이 지금까지의 가장 큰 값보다 크면
         if (r < n && arr[r] > arr[largest]) {
             largest = r;
         }
 
-        // If largest is not root
+        // 가장 큰 값이 루트가 아니라면
         if (largest != i) {
             int temp = arr[i];
             arr[i] = arr[largest];
             arr[largest] = temp;
 
-            // Recursively heapify the affected sub-tree
+            // 영향을 받은 서브트리를 재귀적으로 힙 구조로 변환
             heapify(arr, n, largest);
         }
     }
@@ -100,7 +110,7 @@
 ## 장점
 
 - **효율적인 시간 복잡도**
-    - 일정한 시간 복잡도 O(n log n)를 가지기 때문에 대규모 데이터셋을 정렬하는 데 효율적. log n 요소는 이진 힙의 높이에서 비롯되며, 많은 요소를 처리할 때도 좋은 성능을 유지할 수 있게 합니다.
+    - 일정한 시간 복잡도 O(n log n)를 가지기 때문에 대규모 데이터셋을 정렬하는 데 효율적. log n 요소는 이진 힙의 높이에서 비롯되며, 많은 요소를 처리할 때도 좋은 성능을 유지할 수 있음.
 - **메모리 사용**
     - 정렬할 초기 리스트를 저장하는 데 필요한 공간 외에는 추가적인 메모리 공간을 사용하지 않음.
 
