--- a/알고리즘/기수 정렬.md
+++ b/알고리즘/기수 정렬.md
@@ -26,6 +26,9 @@
 ![image (1)](https://github.com/user-attachments/assets/a882fdd7-d8a1-4b11-a04b-0a4ad72f8e47)
 ![image (2)](https://github.com/user-attachments/assets/3b45b1b6-c3db-49af-b55e-5e1c9b97b912)
 ![image (3)](https://github.com/user-attachments/assets/55f76fae-e433-48b0-aa91-bcaced2a2154)
+![image](https://github.com/user-attachments/assets/2f118f6a-a7da-4195-81fa-2ea2e3bfce26)
+![image](https://github.com/user-attachments/assets/70d2042b-d90f-4891-9f26-6d3c26533098)
+
 
 ![image](https://github.com/user-attachments/assets/e89e1d7e-d291-4e59-a92e-ea33574ac639)
 
