Docs: 최소 공통 조상.md

--- a/알고리즘/최소 공통 조상.md
+++ b/알고리즘/최소 공통 조상.md
@@ -272,7 +272,7 @@ LCA를 찾기 위한 알고리즘은 문제의 성격에 따라 다릅니다:
 
 두 노드 u와 v 간 거리는 다음 식으로 계산할 수 있습니다:
 
-distance(u,v)=level(u)+level(v)−2×level(LCA(u,v))\text{distance}(u, v) = \text{level}(u) + \text{level}(v) - 2 \times \text{level}(\text{LCA}(u, v))
+distance(u,v)=level(u)+level(v)−2×level(LCA(u,v))
 
 LCA를 사용하면 두 노드 간의 공통 조상을 구하고, 이를 통해 깊이 정보를 활용하여 거리를 빠르게 계산할 수 있습니다. 이는 네트워크 분석이나 GIS 문제와 같은 실제 응용에서도 자주 사용됩니다.
 
@@ -280,4 +280,3 @@ LCA를 사용하면 두 노드 간의 공통 조상을 구하고, 이를 통해 
 
 - https://www.geeksforgeeks.org/lowest-common-ancestor-binary-tree-set-1/
 - [https://4legs-study.tistory.com/121](https://4legs-study.tistory.com/121)
--
