Docs: 동적 계획법.md

--- a/알고리즘/동적 계획법.md
+++ b/알고리즘/동적 계획법.md
@@ -184,17 +184,15 @@ public static int bottomUp() {
 [BOJ 14002: 가장 긴 증가하는 부분 수열 4](https://www.acmicpc.net/problem/14002)
 ## 더 알아보기
 
-- 비트마스킹 dp: tsp 알고리즘(외판원 순회)
+- [비트마스킹 dp: tsp 알고리즘(외판원 순회)](https://velog.io/@dltmdrl1244/%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%EC%99%B8%ED%8C%90%EC%9B%90-%EC%88%9C%ED%9A%8CTSP-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98)
     
-    https://velog.io/@dltmdrl1244/%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%EC%99%B8%ED%8C%90%EC%9B%90-%EC%88%9C%ED%9A%8CTSP-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98
     
-- 편집 거리(Edit distance, 문자열 dp)
+- [편집 거리(Edit distance, 문자열 dp)](https://hsp1116.tistory.com/41)
     
-    https://hsp1116.tistory.com/41
     
-- 최장 공통 부분수열/문자열
     
-    https://velog.io/@emplam27/%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%EA%B7%B8%EB%A6%BC%EC%9C%BC%EB%A1%9C-%EC%95%8C%EC%95%84%EB%B3%B4%EB%8A%94-LCS-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-Longest-Common-Substring%EC%99%80-Longest-Common-Subsequence
+- [최장 공통 부분수열/문자열](https://velog.io/@emplam27/%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%EA%B7%B8%EB%A6%BC%EC%9C%BC%EB%A1%9C-%EC%95%8C%EC%95%84%EB%B3%B4%EB%8A%94-LCS-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-Longest-Common-Substring%EC%99%80-Longest-Common-Subsequence)
+    
 
 # 04. 장단점
 
@@ -222,6 +220,6 @@ public static int bottomUp() {
 
 # 06. 참고자료
 
-https://hongjw1938.tistory.com/47#
+[알고리즘 - Dynamic Programming(동적 계획법)](https://hongjw1938.tistory.com/47#)
 
-https://howudong.tistory.com/106
+[배낭 문제(KnapSack Problem) 그림으로 쉽게 이해하기](https://howudong.tistory.com/106)
