--- a/알고리즘/세그먼트 트리.md
+++ b/알고리즘/세그먼트 트리.md
@@ -175,7 +175,17 @@ void update(long[] a, long[] tree, int node, int start, int end, int index, long
 - [BOJ 10868: 최솟값](https://www.acmicpc.net/problem/10868)
 - [BOJ 14428: 수열과 쿼리 16](https://www.acmicpc.net/problem/14428)
 
-# 참고자료
+# 06. 자주 나오는 질문
+
+## 세그먼트 트리란 무엇인가요?
+
+세그먼트 트리는 배열과 같은 데이터를 효율적으로 관리하여 특정 구간의 정보를 빠르게 계산하고, 개별 요소를 업데이트할 수 있는 트리 기반 자료구조입니다. 주로 구간합, 최소/최댓값, 곱셈, XOR 등 집계 연산에 사용됩니다. 주요 연산으로는 특정 범위의 값을 계산하는 구간 쿼리 연산과, 특정 인덱스 값을 수정하고 트리를 갱신하는 업데이트 연산이 있습니다.
+
+## 세그먼트 트리의 시간복잡도는 어떻게 되나요?
+
+세그먼트 트리의 주요 연산인 구간 쿼리와 업데이트 모두 필요한 노드만 탐색 및 갱신하기 때문에 O(logN)입니다.
+
+# 07. 참고자료
 
 https://book.acmicpc.net/ds/segment-tree
 
