Docs: 세그먼트 트리.md

--- a/알고리즘/세그먼트 트리.md
+++ b/알고리즘/세그먼트 트리.md
@@ -187,6 +187,6 @@ void update(long[] a, long[] tree, int node, int start, int end, int index, long
 
 # 07. 참고자료
 
-https://book.acmicpc.net/ds/segment-tree
+[세그먼트 트리](https://book.acmicpc.net/ds/segment-tree)
 
-https://m.blog.naver.com/ndb796/221282210534
+[41. 세그먼트 트리(Segment Tree)](https://m.blog.naver.com/ndb796/221282210534)
