Docs: 해시 테이블.md

--- a/알고리즘/해시 테이블.md
+++ b/알고리즘/해시 테이블.md
@@ -5,7 +5,27 @@
 
 ![hashtable_1](https://github.com/user-attachments/assets/bd85877a-d127-4cf6-88c4-b32d74c5d3e8)
 
-# 02. 해시 테이블 구현
+# 02. 해시 테이블 vs. 해시 맵
+
+Hash Table과 Hash Map은 데이터 구조의 한 유형으로, 해시 함수(hash function)를 사용하여 데이터를 효율적으로 저장하고 검색하는 데 사용된다. 
+둘의 차이는 주로 구현 방식, 동기화(synchronization) 여부 등이 있다.
+
+### 공통점
+- 둘 다 키-값 쌍(key-value pair)을 저장
+- 해시 함수를 사용
+- 충돌 해결을 위해 체이닝(chaining) 또는 오픈 어드레싱(open addressing) 같은 메커니즘을 사용
+
+### 차이점
+| **특징**           | **Hash Table**                         | **Hash Map**                        |
+|--------------------|-----------------------------------------|-------------------------------------|
+| **언어/플랫폼**     | Java 등 전통적인 환경에서 사용됨        | 주로 Java에서 `java.util` 패키지에서 제공 |
+| **동기화 여부**     | 동기화 지원 (Thread-safe)              | 동기화 미지원 (Thread-safe 아님)    |
+| **멀티스레드 환경** | 멀티스레드 환경에 적합                 | 단일 스레드 환경에 적합             |
+| **속도**           | 동기화 때문에 상대적으로 느림          | 동기화가 없어서 상대적으로 빠름     |
+| **Null 허용 여부**  | 키와 값 모두 Null 불가                 | 한 개의 Null 키와 여러 Null 값 허용  |
+
+
+# 03. 해시 테이블 구현
 
 해시 함수, 배열을 이용한 버킷, 충돌 해결 방식 등을 포함해야 함
 
@@ -33,6 +53,24 @@
 ```
 
 3. 체이닝 방식: 충돌을 해결하기 위해 버킷을 LinkedList로 구현
+
+```
+    // 값 삽입/업데이트
+    public void put(K key, V value) {
+        int hash = getHash(key);
+        LinkedList<Node<K, V>> bucket = buckets[hash];
+
+        for (Node<K, V> node : bucket) {
+            if (node.key.equals(key)) {
+                node.value = value; // 키가 이미 존재하면 값 업데이트
+                return;
+            }
+        }
+
+        bucket.add(new Node<>(key, value)); // 새로운 노드 추가
+        size++;
+    }
+```
 
 **전체 코드**
 
@@ -145,7 +183,7 @@ public class Main {
 }
 ```
 
-# 03. 자주 나오는 질문 정리
+# 04. 자주 나오는 질문 정리
 
 ### 해시 테이블에서 충돌(collision)은 무엇이며, 이를 해결하는 방법에는 어떤 것들이 있나요?
 
