Docs: 최소 공통 조상.md

--- a/알고리즘/최소 공통 조상.md
+++ b/알고리즘/최소 공통 조상.md
@@ -228,11 +228,7 @@ public class BinarySearchLCA {
 
 ### 시간 복잡도
 
-- 전처리: `O(NlogN)`
-
-각 노드에 대해 2^j번째 조상을 계산
-
-- 쿼리 처리: `O(logN)`
+- **O(log(depth))**
 
 이분 탐색으로 두 노드의 깊이를 맞추고 공통 조상을 찾음
 
