--- a/알고리즘/비트마스킹.md
+++ b/알고리즘/비트마스킹.md
@@ -1,29 +1,30 @@
 ### **00. 비트마스킹이란?**
 
-비트마스킹은 **비트(bit)**를 활용하여 데이터를 저장하거나 조작하는 기법이다.  
+비트마스킹은 **비트(bit)** 를 활용하여 데이터를 저장하거나 조작하는 기법이다.  
 정수를 이진법으로 표현한 뒤, **비트 연산**을 통해 특정 데이터를 효율적으로 처리할 수 있다.  
 특히, 상태를 저장하거나 집합 연산을 수행할 때 사용된다.
 
 
 ### **01. 비트마스킹 장점**
 
-#### 1. **메모리
+#### 1. 메모리
 
 - 비트마스킹은 하나의 정수(32비트 또는 64비트)에 **최대 32개 또는 64개의 상태**를 저장할 수 있다.
 - 배열이나 다른 자료구조를 사용하는 경우보다 훨씬 **메모리 효율적**이다.
-	- 크기가 32인 집합을 표현할 때, 정수형 변수 1개로 처리
-	- boolean 배열은 32개 이상의 메모리를 사용
+- 크기가 32인 집합을 표현할 때
+ 	 - 비트 마스킹을 사용하면 정수형 변수 1개로 처리할 수 있다.
+	 - 반면, boolean 배열은 32개 이상의 메모리를 사용
 
-#### 2. **시간 복잡도 
+#### 2. 시간 복잡도 
 
 - 비트 연산(AND, OR, XOR 등)은 하드웨어 수준에서 **고정된 시간**에 실행되므로 매우 빠르다.
 	- 비트 연산은 CPU의 ALU(산술 논리 장치)가 처리하는 기본적인 연산이다.
-	- 하드웨어가 이진수를 직접 다루기 때문에, 따로 복잡한 과정 없이 바로 결과를 반환
-- 특정 원소의 삽입, 삭제, 조회 등 연산이 **O(1)**로 처리 가능하다.
+	- 하드웨어가 이진수를 직접 다루기 때문에, 따로 복잡한 과정 없이 바로 결과를 반환할 수 있다.
+- 특정 원소의 삽입, 삭제, 조회 등 연산이 **O(1)** 로 처리 가능하다.
 - 대량의 데이터를 처리하거나 반복 연산 시 성능 차이가 크게 난다.
 
 
-### **02. 비트 연산자
+### 02. 비트 연산자
 
 | 연산자     | 설명                       | 예시 입력          | 예시 결과  |
 | ------- | ------------------------ | -------------- | ------ |
@@ -58,7 +59,6 @@
 
 #### 1. **삽입**
 
-특정 원소를 집합에 추가.
 
 ```java
 int set = 0; // 빈 집합
@@ -67,23 +67,17 @@ set |= (1 << 3); // 3번 비트 추가
 
 #### 2. **삭제**
 
-특정 원소를 집합에서 제거.
-
 ```java
 set &= ~(1 << 3); // 3번 비트 제거
 ```
 
 #### 3. **조회**
 
-특정 원소가 집합에 포함되어 있는지 확인.
-
 ```java
 boolean contains = (set & (1 << 3)) != 0; // 3번 비트가 포함되어 있으면 true
 ```
 
 #### 4. **토글**
-
-특정 원소의 상태를 반전(0 → 1, 1 → 0).
 
 ```java
 set ^= (1 << 3); // 3번 비트 반전
@@ -126,7 +120,6 @@ public class BitMaskingExample {
 삭제 후: 00100
 토글 후: 00000
 ```
-
 
 ### 05. 면접에서 나올 수 있는 질문
 
