Docs: 캐시메모리.md

--- a/컴퓨터구조/캐시메모리.md
+++ b/컴퓨터구조/캐시메모리.md
@@ -81,7 +81,7 @@
 - 저렴하며 메인 메모리로 주로 사용.
 
 ### SRAM (Static RAM)
-- 전원이 켜져 있는 동안 데이터를 유지된다(비휘발성).
+- 전원이 켜져 있는 동안 데이터를 유지된다(휘발성).
 - 속도가 빠르지만 가격이 비싸다.
 - 캐시 메모리로 주로 사용.
 
