--- a/디자인 패턴/팩토리 패턴.md
+++ b/디자인 패턴/팩토리 패턴.md
@@ -1,6 +1,6 @@
 # 00. 개요
 
-- 객치 생성 역할을 별도의 클래스(factory)에게 위임하는 것
+- 객체 생성 역할을 별도의 클래스(factory)에게 위임하는 것
 
 ```java
 Pizza orderPizza(String type) {
@@ -70,10 +70,6 @@ public class PizzaStore{
     - 각 PizzaStore가 서로 다른 팩토리를 사용하면서 일관성이 깨질 위험이 있음
 
 → 팩토리 메소드 패턴을 사용하자
-
-## 추상 팩토리 패턴
-
-- 인터페이스를 이용하여 서로 연관된, 의존하는 객체를 구상 클래스를 지정하지 않고도 생성
 
 # 02. 팩토리 메소드 패턴
 
@@ -181,7 +177,7 @@ Pizza <- NYStyleVeggiePizza
     - 객체 생성을 캡슐화하여 직접 특정 클래스가 직접 new 연산자로 객체를 생성하지 않도록 하며,
     - 객체 생성 책임을 서브클래스로 위임하여 다양한 요구사항에 따라 객체 생성 방식을 유연하게 관리
 
-# 02. 추상 팩토리 클래스
+# 02. 추상 팩토리 패턴
 
 - 서로 관련된 객체들의 집합을 생성하는 인터페이스를 제공하는 패턴
     - 객체 생성 방식을 캡슐화하여 클라이언트 코드가 구체적인 클래스를 직접 참조하지 않도록 설계
