Docs: 구조체 메모리 할당.md

--- a/C언어/구조체 메모리 할당.md
+++ b/C언어/구조체 메모리 할당.md
@@ -66,6 +66,9 @@ printf("Size of double: %lu\n", sizeof(double)); // 8바이트
 - 네트워크 프로토콜 패킷, 메모리를 아껴야 하는 임베디드 시스템 등에서 사용
 
 ###  **`alignas()`**
+- 구조체 크기를 강제로 특정 크기로 맞추는 지시어
+
+---
 
 #### 패딩 예제
 ```c
