Docs: 영속성 컨텍스트.md

--- a/Spring/영속성 컨텍스트.md
+++ b/Spring/영속성 컨텍스트.md
@@ -147,12 +147,7 @@ A. 1차 캐시에 있는 엔티티를 반환하고 DB 접근은 일어나지 않
 
 ![Image](https://github.com/user-attachments/assets/556feff8-5ece-480b-9215-969e69dbce4e)
 
-# 02. 영속성 전이(Persistence Cascade)
-
-- 부모 엔티티의 영속성을 자식 엔티티로 전파시키는 것
-- 부모가 영속화되었다면 영속성 전이를 통해 자식 또한 별다른 작업 없이도 영속화됨
-
-# 03. 특징과 장점
+# 02. 특징과 장점
 
 ## 특징
 
@@ -160,6 +155,9 @@ A. 1차 캐시에 있는 엔티티를 반환하고 DB 접근은 일어나지 않
     - 영속성 컨텍스트는 엔티티를 식별자 값(@Id)으로 구분
 2. 영속성 컨텍스트와 데이터베이스 저장
     - JPA는 트랜잭션을 커밋하는 순간 영속성 컨텍스트에 새로 저장된 엔티티를 DB에 반영(flush)
+3. 영속성 전이(persistence cascade)
+    - 부모 엔티티의 영속성을 자식 엔티티로 전파시키는 것
+    - 부모가 영속화되었다면 영속성 전이를 통해 별다른 작업 없이도 자식 또한 영속화됨
 
 ## 장점
 
